objects/revcult__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Fill_Rates_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fill Rates Job</label>
        <referenceTo>revcult__Fill_Rates_Job__c</referenceTo>
        <relationshipLabel>Error Log</relationshipLabel>
        <relationshipName>Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Method_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Security_Insights_Refresh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Security Insights Refresh which produced this error</description>
        <inlineHelpText>This is a lookup to the Security Insights Refresh which produced this error</inlineHelpText>
        <label>Security Insights Refresh</label>
        <referenceTo>revcult__Security_Insights_Refresh__c</referenceTo>
        <relationshipLabel>Error Log</relationshipLabel>
        <relationshipName>Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Shield_Accelerator_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shield Accelerator Job</label>
        <referenceTo>revcult__Shield_Accelerator_Job__c</referenceTo>
        <relationshipLabel>Error Log</relationshipLabel>
        <relationshipName>Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Stack_Trace__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Wizard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wizard</label>
        <referenceTo>revcult__Wizard__c</referenceTo>
        <relationshipName>Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>